--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,7 @@
 .App {
   text-align: center;
+  background-color: #88e35b;
+  font-family: 'Bebas Neue', -apple-system, BlinkMacSystemFont,  'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans' ; 
+  color: #fff;
 }
 
