--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,4 +1,19 @@
 .navbar {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+}
+
+.navbar-ul {
+  list-style-type: none;
+  width: 100%;
   display: flex;
   flex-direction: row;
+}
+
+.navbar-list-item {
+  width: 20%;
 }
