--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -13,8 +13,11 @@
 }
 
 .portfolio-item-caption {
-  height: 100%;
-  width: 100%;
+  display: flex;
+  height: 100% !important;
+  width: 100% !important;
+  align-items: center !important;
+  justify-content: center !important;
   position: absolute;
   transition: all 0.2s ease-in-out;
   opacity: 0;
@@ -23,4 +26,12 @@
 
 .portfolio-item-caption:hover {
   opacity: 1;
+}
+
+.portfolio-item-icon {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 1em;
+  margin-right: 1.5em;
 }
