--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 .App {
   position: relative;
   text-align: center;
@@ -10,12 +14,11 @@ h1 {
   font-size: 5rem;
 }
 
-.content-wrap {
-  padding-bottom: 2.5rem;
-}
-
 section {
-  margin-top: 5rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-top: 10vh;
   margin-left: 2rem;
   margin-right: 2rem;
+  max-height: 90vh;
 }
